add single pronostici; missing riepilogo

--- a/stagioni/2022-2023/pronostici/2.md
+++ b/stagioni/2022-2023/pronostici/2.md
@@ -1,18 +1,18 @@
 ---
 layout: pronostici
-title: Pronostici Apoel Kan
-permalink: /2022-2023/pronostici/1
+title: Pronostici Godopoli Sportiva
+permalink: /2022-2023/pronostici/2
 squadre: [1,2,3,4,5,6,7,8,9,10]
 ---
 <ol>
-<li>Real Pollo</li>
 <li>Paris Saint Germano</li>
 <li>Godopoli Sportiva</li>
-<li>ApoelKan</li>
 <li>Ire Framba United</li>
-<li>Patetico Mineiro</li>
+<li>ApoelKan</li>
 <li>Pompy FC</li>
-<li>Reggisenal</li>
+<li>Real Pollo</li>
 <li>Team Barco FC</li>
+<li>Reggisenal</li>
 <li>Medusa</li>
+<li>Patetico Mineiro</li>
 </ol>
