--- a/stagioni/2022-2023/pronostici/10.md
+++ b/stagioni/2022-2023/pronostici/10.md
@@ -1,18 +1,18 @@
 ---
 layout: pronostici
-title: Pronostici Apoel Kan
-permalink: /2022-2023/pronostici/1
+title: Pronostici Team Barco
+permalink: /2022-2023/pronostici/10
 squadre: [1,2,3,4,5,6,7,8,9,10]
 ---
 <ol>
 <li>Real Pollo</li>
-<li>Paris Saint Germano</li>
 <li>Godopoli Sportiva</li>
 <li>ApoelKan</li>
-<li>Ire Framba United</li>
-<li>Patetico Mineiro</li>
 <li>Pompy FC</li>
-<li>Reggisenal</li>
+<li>Paris Saint Germano</li>
+<li>Patetico Mineiro</li>
 <li>Team Barco FC</li>
+<li>Ire Framba United</li>
 <li>Medusa</li>
+<li>Reggisenal</li>
 </ol>
