--- a/stagioni/2022-2023/pronostici/3.md
+++ b/stagioni/2022-2023/pronostici/3.md
@@ -1,18 +1,18 @@
 ---
 layout: pronostici
-title: Pronostici Apoel Kan
-permalink: /2022-2023/pronostici/1
+title: Pronostici Ire Framba United
+permalink: /2022-2023/pronostici/3
 squadre: [1,2,3,4,5,6,7,8,9,10]
 ---
 <ol>
-<li>Real Pollo</li>
 <li>Paris Saint Germano</li>
 <li>Godopoli Sportiva</li>
+<li>Real Pollo</li>
 <li>ApoelKan</li>
 <li>Ire Framba United</li>
+<li>Team Barco FC</li>
 <li>Patetico Mineiro</li>
 <li>Pompy FC</li>
 <li>Reggisenal</li>
-<li>Team Barco FC</li>
 <li>Medusa</li>
 </ol>
