--- a/stagioni/2022_2023/coppa/1.md
+++ b/stagioni/2022_2023/coppa/1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Gironi Coppa Box - Giornata 1
-permalink: /2022-2023/coppa/1
+permalink: /2022_2023/coppa/1
 ---
 
 {% for item in site.data.stagione_2022_2023.giornata_coppa_1 %}
